--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Practica Git en VS Code</title>
 </head>
 <body>
-     <h2>Texto 2.</h2>
+    <h2>Texto 2.</h2>
+    <h3>Sub Titulo 3</h3>
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, assumenda.</p>
 </body>
 </html>
