Cambios en index suscripcion y en token.js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h2>Texto 2.</h2>
     <h3>Sub Titulo 3</h3>
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, assumenda.</p>
+    <h4>Suscripción</h4>
 </body>
 </html>
